using com.sandinh:android-image-croppe

--- a/plugin.xml
+++ b/plugin.xml
@@ -57,13 +57,15 @@
 
     <framework src="src/android/test.gradle" custom="true" type="gradleReference" />
 
-    <resource-file src="lib/android-crop-release.aar" target="libs/android-crop-release.aar" />
+    <!--<resource-file src="lib/android-crop-release.aar" target="libs/android-crop-release.aar" />-->
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
-      <activity android:name="com.soundcloud.android.crop.CropImageActivity" />
+      <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+                android:theme="@style/Base.Theme.AppCompat"/>
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     </config-file>
 
