--- a/plugin.xml
+++ b/plugin.xml
@@ -55,7 +55,7 @@
       </feature>
     </config-file>
 
-    <framework src="src/android/test.gradle" custom="true" type="gradleReference" />
+    <framework src="src/android/refer.gradle" custom="true" type="gradleReference" />
 
     <!--<resource-file src="lib/android-crop-release.aar" target="libs/android-crop-release.aar" />-->
 
