--- a/plugin.xml
+++ b/plugin.xml
@@ -61,7 +61,9 @@
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
       <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-                android:theme="@style/Base.Theme.AppCompat"/>
+                android:theme="@style/Base.Theme.AppCompat"
+                android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+      />
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
