--- a/src/android/refer.gradle
+++ b/src/android/refer.gradle
@@ -3,13 +3,14 @@ repositories{
   mavenCentral()
   maven { url "https://oss.sonatype.org/content/repositories/releases/" }
   maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+  maven { url "https://maven.google.com" }
   jcenter()
 }
 
 dependencies {
    compile 'com.android.support:appcompat-v7:25.3.1'
    compile "com.android.support:exifinterface:25.3.1"
-   compile 'com.sandinh:android-image-cropper:2.4.9@aar'
+   compile 'com.sandinh:android-image-cropper:2.5.0@aar'
 }
 
 android {
